Fix mod URLs